--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -28,13 +28,6 @@
 					</br>
 					
 					<div class='input-box'>
-						
-						<input name='empresa' ng-model='signUp.empresa' placeholder="Empresa Afiliada" class='color-yellow' type='text'/>
-						<img class='input-icon icon-20' src='img/icons/user.png'/>
-					</div>
-					</br>					
-					
-					<div class='input-box'>
 						<div class="error-container " ng-show="sign_up_form.user_name.$dirty && sign_up_form.user_name.$invalid" >
 							<small class="error	 " ng-show="sign_up_form.user_name.$error.required">{{ 'Enter user name' | langTranslate: appConvertedLang['Enter_user_name'] }}</small>
 							<small class="error	 " ng-show="sign_up_form.user_name.$error.minlength">{{ 'Minimum 6 characters' | langTranslate: appConvertedLang['Minimum_6_characters'] }}</small>
@@ -61,20 +54,6 @@
 					</br>
 					
 					<div class='input-box'>
-						<div class="error-container " ng-show="sign_up_form.number.$dirty && sign_up_form.number.$invalid" >
-							<small class="error	 " ng-show="sign_up_form.number.$error.required">Ingresa tu edad</small>
-							<small class="error	 " ng-show="sign_up_form.number.$error.number">Ingresa un n&uacute;mero v&aacute;lido</small>								
-							<small class="error	 " ng-show="sign_up_form.number.$error.minlength">Ingresa un n&uacute;mero v&aacute;lido</small>								
-							<small class="error	 " ng-show="sign_up_form.number.$error.maxlength">Ingresa un n&uacute;mero v&aacute;lido</small>								
-						</div>
-						
-						<input name='edad' placeholder="Edad" ng-model='signUp.edad' type='number' class='color-yellow' type='text' ng-minlength="2" ng-maxlength="2" required />
-						<img class='input-icon icon-20' src='img/icons/user.png'/>
-						
-					</div>					
-					</br>
-					
-					<div class='input-box'>
 						<div class="error-container " ng-show="sign_up_form.mail.$dirty && sign_up_form.mail.$invalid" >
 							<small class="error	 " ng-show="sign_up_form.mail.$error.required">{{ 'Enter email' | langTranslate: appConvertedLang['Enter_email'] }}</small>
 							<small class="error	 " ng-show="sign_up_form.mail.$error.email">{{ 'Enter valid email' | langTranslate: appConvertedLang['Enter_valid_email'] }}</small>								
@@ -90,7 +69,7 @@
 							<small class="error	 " ng-show="sign_up_form.pwd.$error.required">{{ 'Enter Password' | langTranslate: appConvertedLang['Enter_Password'] }}</small>
 							<small class="error	 " ng-show="sign_up_form.pwd.$error.minlength">{{ 'Minimum 6 characters' | langTranslate: appConvertedLang['Minimum_6_characters'] }}</small>								
 						</div>
-						<input name='pwd' ng-model='signUp.pwd' placeholder="Contrase&ntilde;a" class='color-yellow' ng-minlength='6' type='password' required/>
+						<input name='pwd' ng-model='signUp.pwd' placeholder="{{ 'password' | langTranslate: appConvertedLang['password'] }}" class='color-yellow' ng-minlength='6' type='password' required/>
 						<img class='input-icon icon-20' src='img/icons/lock.png'/>
 					</div>
 					</br>
@@ -104,15 +83,7 @@
 						<img class='input-icon icon-20' src='img/icons/lockTick.png'/>
 					</div>
 					
-					<div class='head'>
-						<span > Debe ingresar un documento de identificaci&oacute;n preferiblemente coorporativo para validar manualmente su acceso a la aplicaci&oacute;n </span>
-					</div>					
-					
-					<input ng-click='getImage()'  class='btn bg-black color-white big-font m-top-20' type='button' value="Seleccionar Foto ID de la Biblioteca" /> 
-					
-					</br>
-					
-					<input ng-click='tomaImage()'  class='btn bg-black color-white big-font m-top-20' type='button' value="Tomar Foto de ID o NIT" /> 
+					<input onclick='capturePhoto()' ng-click='capturePhoto()'  class='btn bg-yellow color-white big-font m-top-20' type='button' value="Tomar FOTO de ID" /> 
 					
 					</br>
 					
